# lightweight-antivirus

./: Cargo.toml  README.md
lighitweight-av/: Cargo.toml
src/: main.rs
src/eventsystem/: kernel.rs  mod.rs  test.rs  user.rs
src/user/: mod.rs  updater.rs
src/user/rule/: mod.rs  model.rs  repository.rs  schema.rs  test.rs
src/user/updater/: handlers.rs  mod.rs  models.rs  page.rs  policy_page.html  state.rs  test.rs
