[package]
name = "lightweight-antivirus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = {version="1.49.0",features=["sync", "macros", "rt-multi-thread", "time"]}
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
